FE-002 : Main Layout & Navigation - Header Section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,32 +17,30 @@
 
 @theme {
   --color-mint-50:  #46CE83; /* primary color */
-  --color-mint-70: #89DC7E;
+  --color-mint-70:  #89DC7E;
   --color-mint-75:  #BCFF7D;
-  --color-mint-80: #D8FF99;
+  --color-mint-80:  #D8FF99;
 
   --color-white-90: #E4E4E7;
   --color-white-95: #F1F1F3;   /* secondary color */
-  --color-white-97: #F7F7F8;  /* background color */
-  --color-white-99: #FCFCFD;  /* input block color */
+  --color-white-97: #F7F7F8;  /* body background color */
+  --color-white-99: #FCFCFD;  /* input background color */
 
-  --color-grey-10:  #1A1A1A;
-  --color-grey-15:  #262626;  /* text color */
-  --color-grey-20:  #333333;
-  --color-grey-30:  #4D4D4D;  /* paragraph color */
-  --color-grey-40:  #666666;   /* placeholder color */
-  --color-grey-50:  #808080;
-  --color-grey-60:  #999999;
-  --color-grey-70:  #B3B3B3;
+  --color-gray-10:  #1A1A1A;
+  --color-gray-15:  #262626;  /* text color */
+  --color-gray-20:  #333333;
+  --color-gray-30:  #4D4D4D;  /* paragraph color */
+  --color-gray-40:  #666666;   /* placeholder color */
+  --color-gray-50:  #808080;
+  --color-gray-60:  #999999;
+  --color-gray-70:  #B3B3B3;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+#root {
+  max-width: 100vw;
+  width: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -51,20 +49,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100vw;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
- 
-}
